# uob-sepp-prototype

./: .gitignore  DataImporting.txt  Dockerfile  README.md  SQL commands.txt  TestData.txt  app.py  main.ui  marking-detector-prototype.spec  pyproject.toml  statistics_test.py
.github/workflows/: build_executable.yml  deploy_database_to_server.yml  main.yml
data/: MarkerData.txt
docker/: compose.yml  marking.sql
docs/: meeting1.md  meeting2.md  meeting3.md
src/: DBConnect.py  app.py  graphing.py  statistics_test.py
templates/: index.html
test/: hiddenintegrationtests.py  st_tests.py  unit_tests.py
