[tool.poetry]
name = "uob-sepp-prototype"
version = "0.1.0"
description = "Prototype for UOB Software Engineering & Professional Practice Module"
authors = ["Hannah Blyton <hxb303@student.bham.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "5.15.11"
pyqt-fluent-widgets = {version = "^1.7.1", source = "pypi"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
